# foodReservation

./: CMakeLists.txt  README.md  a.out  input.txt  main.c  objects.c  objects.h  objects.h.gch  test_case_input.txt  tools.c  tools.h  tools.h.gch
database/: databas.c  databas.h  databas.h.gch  financialLog.c  financialLog.h  financialLog.h.gch  foodLogdb.c  foodLogdb.h  foodLogdb.h.gch  fooddb.c  fooddb.h  fooddb.h.gch  newsdb.c  newsdb.h  newsdb.h.gch  polldb.c  polldb.h  polldb.h.gch  reservedFoodsdb.c  reservedFoodsdb.h  reservedFoodsdb.h.gch  scheduledb.c  scheduledb.h  scheduledb.h.gch  selfdb.c  selfdb.h  selfdb.h.gch  userdb.c  userdb.h  userdb.h.gch  votedb.c  votedb.h
src/: admin.c  admin.h  admin.h.gch  app.c  app.h  app.h.gch  food.c  food.h  logs.c  logs.h  student.c  student.h  student.h.gch  user.c  user.h  user.h.gch
testCase/: input.txt  testCase.c  testCase.h  testCase.h.gch
